[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font.tres" type="Theme" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
score_scene = "res://Score.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 1024.0
margin_bottom = 190.0
theme = ExtResource( 2 )
custom_constants/hseparation = 0
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Button" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 1024.0
margin_bottom = 310.0
theme = ExtResource( 2 )
text = "scores"

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 410.0
margin_right = 1024.0
margin_bottom = 430.0
theme = ExtResource( 2 )
text = "Leave game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
